Removed tipsy + Added new tooltip for mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Glossarize jQuery Plugin</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
-  <link rel="stylesheet" href="tipsy/tipsy.css">
+  <link rel="stylesheet" href="tooltip/tooltip.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     /* Content */
 
@@ -16,7 +17,7 @@
     /* Glossarized Content */
 
     .glossarizer_replaced{
-      border-bottom: 1px #333 dashed;
+      border-bottom: 1px #333 dotted;
       cursor: help;
     }
   </style>
@@ -108,7 +109,7 @@
   
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="tipsy/jquery.tipsy.js"></script>
+  <script src="tooltip/tooltip.js"></script>
   <script src="jquery.glossarize.js"></script>
   <script>
 
@@ -117,12 +118,7 @@
     $('.content').glossarizer({
       sourceURL: 'glossary.json',
       callback: function(){
-
-        $('.glossarizer_replaced').tipsy({
-          fade: true,
-          opacity: 1
-        });
-
+        new tooltip();
       }
     });
 
