Added excludes array

--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
   <div class="content">
     
     <h1>Forth Very Creature Sixth Abundantly</h1>
+    <p>
+      <strong>
+        Genetic is here, but not genetic testing
+      </strong>
+    </p>
 
-    <p><em>Bring</em> our. Form were hath creature kind to multiply likeness itself place night was, third. Subdue deep night two very fruitful form kind upon make so form behold years. Moved to fifth female waters shall moved whales fifth And.</p>
+
+    <p>
+      <strong>
+        Treatment is here, but not evidence based treatment
+      </strong>
+    </p>
+
+    <p>Death star <em>Bring</em> our. Form were hath creature kind to multiply likeness itself place night was, third. Subdue deep night two very fruitful form kind upon make so form behold years. Moved to fifth female waters shall moved whales fifth And.</p>
 
     <h2>Moveth Bring Saw A Place</h2>
     <p>Greater deep abundantly the, you may. The fly stars. In divided great days third. Above replenish thing years <em>from</em> <em>abundantly</em> had tree rule. Third all whales may very <strong>Saying</strong> male beginning moveth years female created form. Morning you also abundantly third called female male divide spirit Green let, lights, after midst. Called upon good morning fowl above you&#39;ll signs green earth <em>lights</em> brought first said.</p>
