Prevents recursive glossarization

--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
 
 
     <p>
-      <strong>
+      <a href="#"> A link within a paragraph: 
         Treatment is here, but not evidence based treatment
-      </strong>
+      </a>
     </p>
+
+    <a href="#"> A Standalone link
+        Treatment is here, but not evidence based treatment
+    </a>
 
     <p>Death star <em>Bring</em> our. Form were hath creature kind to multiply likeness itself place night was, third. Subdue deep night two very fruitful form kind upon make so form behold years. Moved to fifth female waters shall moved whales fifth And.</p>
 
