--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     .glossarizer_replaced{
       border-bottom: 1px #333 dotted;
       cursor: help;
+      display: inline;
     }
   </style>
 </head>
