Fixed a bug where special characters in word didnt get replaced

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </strong>
     </p>
 
-
+    <p>Power of Attorney (POA)</p>
     <p>
       <a href="#"> A link within a paragraph: 
         Treatment is here, but not evidence based treatment
