Multiple terms demo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Forth Very Creature Sixth Abundantly</h1>
     <p>
       <strong>
-        Genetic is here, but not genetic testing
+        Genetic hereditary is here, but not genetic testing
       </strong>
     </p>
 
